# intelope

./: .gitignore  LICENSE  README.md  cli.py  intelope-dashboard.html  pyproject.toml  setup.cfg
ingestion/: browser.py  chat.py  documents.py  notes.py  router.py
ingestion/training/: finetune.py  inference.py
pipeline/: clean.py  rag.py
ui/: app.py  intelope-dashboard.html
